# perf-triage

./: .gitignore  README.md  gcal.py  pyproject.toml  requirements.txt  rotation.py  rotations.pickle  send-reminder.py
.github/workflows/: publish.yml
docs/: calculator.html  index.html
